fix: comment out collapsed search bar for now because its broken

--- a/complementary.theme.scss
+++ b/complementary.theme.scss
@@ -17,7 +17,7 @@
 }
 
 // Collapsed Search Bar (by Freeplay)
-[class*="title_"][class*="container_"] [class*="toolbar_"] [class*="search_"] [class*="searchBar_"] {
+/*[class*="title_"][class*="container_"] [class*="toolbar_"] [class*="search_"] [class*="searchBar_"] {
   background: none !important;
   width: 24px;
   color: var(--color-text);
@@ -43,4 +43,4 @@
 [class*="toolbar_"] [class*="open_"] [class*="searchBar_"] svg {
   color: var(--text-muted);
   transform: scale(0.8);
-}
+}*/
